add_executable(test test.cpp)
add_dependencies(test sylar)
target_link_libraries(test sylar)
force_redefine_file_macro_for_sources(test)

add_executable(test_config test_config.cpp)
add_dependencies(test_config sylar)
target_link_libraries(test_config sylar)
force_redefine_file_macro_for_sources(test_config)

add_executable(test_thread test_thread.cpp)
add_dependencies(test_thread sylar)
target_link_libraries(test_thread sylar)
force_redefine_file_macro_for_sources(test_thread)

add_executable(test_util test_util.cpp)
add_dependencies(test_util sylar)
target_link_libraries(test_util sylar)
force_redefine_file_macro_for_sources(test_util)

add_executable(test_fiber test_fiber.cpp)
add_dependencies(test_fiber sylar)
target_link_libraries(test_fiber sylar)
force_redefine_file_macro_for_sources(test_fiber)

add_executable(test_scheduler test_scheduler.cpp)
add_dependencies(test_scheduler sylar)
target_link_libraries(test_scheduler sylar)
force_redefine_file_macro_for_sources(test_scheduler)

add_executable(test_iomanager test_iomanager.cpp)
add_dependencies(test_iomanager sylar)
target_link_libraries(test_iomanager sylar)
force_redefine_file_macro_for_sources(test_iomanager)

add_executable(test_hook test_hook.cpp)
add_dependencies(test_hook sylar)
target_link_libraries(test_hook sylar)
force_redefine_file_macro_for_sources(test_hook)
